[project]
name = "BloodwingReturnFix"
version = "1.0.0"
authors = [{ name = "yeti" }]
description = "Removes collision on bloodwings return, also detects if bloodwing has disappeared."

[tool.sdkmod]
name = "Bloodwing Return Fix"
mod_type = "Standard" # or "Library"
supported_games = "BL1"
coop_support = "Unknown"
download = ""
license = {name = "GPL3", url = "https://choosealicense.com/licenses/gpl-3.0/" }
