[project]
name = "CleaningUpPandora"
version = "1.0.0"
authors = [{ name = "yeti" }]
description = "Sell ground loot."

[tool.sdkmod]
name = "Cleaning Up Pandora"
mod_type = "Standard" # or "Library"
supported_games = ["BL1"]
coop_support = "Unknown"
download = "https://github.com/RedxYeti/Yeti-BL1-SDK-Mods/raw/refs/heads/main/CleaningUpPandora/CleaningUpPandora.zip"
license = {name = "GPL3", url = "https://choosealicense.com/licenses/gpl-3.0/" }
