[project]
name = "DLCFastTravel"
version = "1.0.1"
authors = [{ name = "Yeti, Miner" } ]
description = "Adds fast travels to all of the story DLCs. Works coop!"

[tool.sdkmod]
name = "DLC Fast Travel"
mod_type = "Standard"
supported_games = ["BL1"]
coop_support = "RequiresAllPlayers"
download = "https://github.com/RedxYeti/Yeti-BL1-SDK-Mods/tree/main/DLCFastTravelSDK"
license = {name = "GPL3", url = "https://choosealicense.com/licenses/gpl-3.0/" }



