[project]
name = "DedicatedDrops"
version = "1.0.0"
authors = [{ name = "RedxYeti" }]
description = "Adds dedicated loot sources to enemies across the game."

[tool.sdkmod]
name = "Dedicated Drops"
mod_type = "Standard" # or "Library"
supported_games = ["BL1"]
coop_support = "Unknown"
auto_enable = "False"
license = {name = "GPL3", url = "https://choosealicense.com/licenses/gpl-3.0/" }
