[project]
name = "DedicatedDrops"
version = "1.1.1"
authors = [{ name = "RedxYeti" }]
description = "Adds dedicated loot sources to enemies across the game. Coop supported!"

[tool.sdkmod]
name = "Dedicated Drops"
mod_type = "Standard"
supported_games = ["BL1"]
coop_support = "RequiresAllPlayers"
download = "https://github.com/RedxYeti/Yeti-BL1-SDK-Mods/tree/main/DedicatedDropsSDK"
license = {name = "GPL3", url = "https://choosealicense.com/licenses/gpl-3.0/" }






