[project]
name = "EnemyRandomizer"
version = "1.0.0"
authors = [{ name = "yeti" }]
description = "Randomizes Enemies"

[tool.sdkmod]
name = "Enemy Randomizer"
mod_type = "Standard" # or "Library"
supported_games = "BL1"
coop_support = "Unknown"
download = "https://github.com/RedxYeti/Yeti-BL1-SDK-Mods/raw/refs/heads/main/EnemyRandomizer/EnemyRandomizer.zip"
license = {name = "GPL3", url = "https://choosealicense.com/licenses/gpl-3.0/" }
