[project]
name = "ItemLights"
version = "1.0.0"
authors = [{ name = "yeti" }]
description = "Adds lights to ground loot."

[tool.sdkmod]
name = "Item Lights"
mod_type = "Standard" # or "Library"
supported_games = "BL1"
coop_support = "Unknown"
download = "https://github.com/RedxYeti/Yeti-BL1-SDK-Mods/raw/refs/heads/main/ItemLights/ItemLights.zip"
license = {name = "GPL3", url = "https://choosealicense.com/licenses/gpl-3.0/" }
