[project]
name = "NoAimPunch"
version = "1.0.0"
authors = [{ name = "yeti" }]
description = "Remove the screen shake when you take damage."

[tool.sdkmod]
name = "No Aim Punch"
mod_type = "Standard" # or "Library"
supported_games = "BL1"
coop_support = "Client Side"
download = "https://github.com/RedxYeti/Yeti-BL1-SDK-Mods/raw/refs/heads/main/NoAimPunch/NoAimPunch.sdkmod"
auto_enable = "False"
license = {name = "GPL3", url = "https://choosealicense.com/licenses/gpl-3.0/" }
