[project]
name = "QuickUseVendors"
version = "1.1.0"
authors = [{ name = "yeti" }]
description = "Max out your ammo or health with a hotkey at Vendors."

[tool.sdkmod]
name = "Quick Use Vendors"
mod_type = "Standard" # or "Library"
supported_games = "BL1"
coop_support = "Unknown"
download = "https://github.com/RedxYeti/Yeti-BL1-SDK-Mods/raw/refs/heads/main/QuickUseVendors/QuickUseVendors.sdkmod"
auto_enable = "False"
license = {name = "GPL3", url = "https://choosealicense.com/licenses/gpl-3.0/" }


