[project]
name = "SkillRandomizer"
version = "1.0.0"
authors = [{ name = "yeti" }]
description = "Randomizes skill trees to use other characters skills. Also updates the classmods if youre missing a skill."

[tool.sdkmod]
name = "Skill Randomizer"
mod_type = "Standard" # or "Library"
supported_games = "BL1"
coop_support = "Unknown"
download = "https://github.com/RedxYeti/Yeti-BL1-SDK-Mods/raw/refs/heads/main/SkillRandomizer/SkillRandomizer.zip"
license = {name = "GPL3", url = "https://choosealicense.com/licenses/gpl-3.0/" }
