[project]
name = "TechPoolVisualizer"
version = "1.0.0"
authors = [{ name = "yeti" }]
description = "Shows your weapons current tech pool on screen"

[tool.sdkmod]
name = "Tech Pool Visualizer"
mod_type = "Standard" # or "Library"
supported_games = ["BL1"]
coop_support = "Unknown"
download = "https://github.com/RedxYeti/Yeti-BL1-SDK-Mods/raw/refs/heads/main/TechPoolVisualizer/TechPoolVisualizer.zip"
license = {name = "GPL3", url = "https://choosealicense.com/licenses/gpl-3.0/" }
